--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title">Security App</string>
     <string name="name">Name</string>
     <string name="sign_up_title">Sign Up</string>
+    <string name="google_maps_key">AIzaSyClK2Qxit3ep0bjGok_rKBtLH3cBNwiM2o</string>
 </resources>
